<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/vaccineNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/vaccineNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:text="@string/vaccine"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/vaccineName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/vaccineName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:gravity="end"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:textColor="#897f7f"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vaccineNameLayout" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/vaccineDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2" >

        <TextView
            android:id="@+id/vaccineDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|top"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/vaccine_details"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/viewVaccineDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/vaccination_item_bg1"
            android:gravity="end|center_vertical"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vaccineDetails"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vaccineDetailsLayout" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/vaccineDateLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view3" >

        <TextView
            android:id="@+id/vaccineDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/vaccine_due"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/vaccineDateText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/vaccineDateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="end|center_vertical"
            android:textSize="18sp" />

    </android.support.constraint.ConstraintLayout>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vaccineDateLayout" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/vaccineGivenLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view4" >

        <TextView
            android:id="@+id/vaccineGivenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/vaccine_given"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/viewVaccineGiven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <!--<RelativeLayout-->
        <!--android:id="@+id/vaccineGivenLayout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dp"-->
        <!--android:orientation="horizontal" >-->

        <!--<TextView-->
            <!--android:id="@+id/vaccineGivenTitle"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:paddingStart="10dp"-->
            <!--android:paddingEnd="10dp"-->
            <!--android:layout_toStartOf="@id/viewVaccineGiven"-->
            <!--android:text="@string/vaccine_given"-->
            <!--android:textSize="18sp" />-->

        <!--<CheckBox-->
            <!--android:id="@+id/viewVaccineGiven"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginEnd="20dp"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:textSize="18sp" />-->

    <!--</RelativeLayout>-->

</android.support.constraint.ConstraintLayout>